<resources>
    <string name="app_name">Android Quiz App</string>
    <string name="title">Android Quiz</string>

    <string name="wrong">incorrect</string>

    <!-- INSTRUCTIONS -->
    <string name="instructions_two">Fill in the blanks for 1. through 5. </string>

    <!-- FILL IN THE BLANKS ENTRIES-->
    <string name="question_one"> (       1       )</string>
    <string name="question_two"> (       2       )</string>
    <string name="question_three"> (       3       )</string>
    <string name="question_four"> (       4       )</string>
    <string name="question_five"> (       5       )</string>

    <!-- MULTIPLE CHOICE-->
    <string name="question_six">6. Which of the following are used to make comments</string>
    <string name="question_seven">7. Which of the following are legal class names</string>
    <string name="question_eight">8. Unit of length for specifying the size of a font of type</string>
    <string name="question_nine">9. CamelCase begins with a capital letter</string>
    <string name="question_ten">10. HexColor: Red </string>
    <string name="question_eleven">11. HexColor: White </string>
    <string name="question_twelve">12. HexColor: Black </string>

    <!-- ButtonView QUESTIONS 1-5 -->
    <string name="buton">Button</string>
    <string name="layout">:layout_width = \"wrap_content\"</string>
    <string name="android">android:</string>
    <string name="wrapContent">= \"wrap_content\"</string>
    <string name="helloWorld"> = \"Hello World!\"</string>



    <!-- MULTIPLE CHOICE COMMENT OPTIONS-->
    <string name="comments_1"> // </string>
    <string name="comments_2">&lt;!-- --&gt;</string>
    <string name="comments_3"> /**  */</string>
    
    <string name="legalClassName">TextView</string>
    <string name="illegalClassName1">TEXTVIEW</string>
    <string name="illegalClassName2">text_view</string>

    <string name="allOfTheAbove">All of the Above</string>
    <!-- BUTTON -->
    <string name="submit">Submit</string>


    <!-- CHOICES-->
    <string name="dp">dp (density-independent pixel</string>
    <string name="sp">sp (scale-independent pixel)</string>
    <!-- COLORS -->
    <string name="red">FF0000</string>
    <string name="orange">FF8000</string>
    <string name="yellow">FFFF00</string>
    <string name="green">00FF00</string>
    <string name="blue">0000FF</string>
    <string name="purple">00FF00</string>
    <string name="white">FFFFFF</string>
    <string name="gray">808080</string>
    <string name="black">000000</string>

    <!-- TRUE/FALSE-->
    <string name="trueAnswer">True</string>
    <string name="falseAnswer">False</string>

<!-- A PLACEHOLDER FOR RESULTS -->
    <string name="results">Results</string>

</resources>
