<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.jkhkdeveloper.spanishquizapp.MainActivity">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:gravity="center_horizontal"
            android:text="@string/title"
            android:textSize="52sp" />


        <TextView
            android:id="@+id/textView2"
            style="@style/QuestionTitleStyle"
            android:text="@string/instructions_two" />

        <LinearLayout style="@style/LinearLayout_FillInTheBlank">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1. " />
            <EditText
                android:id="@+id/answer_one"
                style="@style/FillInTheBlank"

                android:hint="@string/question_one" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayout_FillInTheBlank">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2. " />

            <EditText
                android:id="@+id/answer_two"
                style="@style/FillInTheBlank"
                android:hint="@string/question_two" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayout_FillInTheBlank">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" 3. " />
            <EditText
                android:id="@+id/answer_three"
                style="@style/FillInTheBlank"
                android:hint="@string/question_three"
                android:layout_width="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wrapContent" />

        </LinearLayout>

        <LinearLayout style="@style/LinearLayout_FillInTheBlank">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" 4. " />

            <EditText
                android:id="@+id/answer_four"
                style="@style/FillInTheBlank"
                android:hint="@string/question_four" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/helloWorld" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" 5. " />

            <EditText
                android:id="@+id/answer_five"
                style="@style/FillInTheBlank"
                android:hint="@string/question_five" />

        </LinearLayout>

        <!-- QUESTION 6 -->
        <TextView
            android:id="@+id/question_six"
            style="@style/QuestionTitleStyle"
            android:text="@string/question_six" />

        <CheckBox
            android:id="@+id/incorrect_answer_six_1"
            style="@style/AnswerStyle"
            android:text="@string/comments_1" />

        <CheckBox
            android:id="@+id/incorrect_answer_six_2"
            style="@style/AnswerStyle"
            android:text="@string/comments_2" />

        <CheckBox
            android:id="@+id/incorrect_answer_six_3"
            style="@style/AnswerStyle"
            android:text="@string/comments_3" />

        <CheckBox
            android:id="@+id/correct_answer_six"
            style="@style/AnswerStyle"
            android:text="@string/allOfTheAbove" />

        <!-- QUESTION 7 -->
        <TextView
            android:id="@+id/question_seven"
            style="@style/QuestionTitleStyle"
            android:text="@string/question_seven" />

        <CheckBox
            android:id="@+id/incorrect_answer_seven_1"
            style="@style/AnswerStyle"
            android:text="@string/illegalClassName1" />

        <CheckBox
            android:id="@+id/correct_answer_seven"
            style="@style/AnswerStyle"
            android:text="@string/legalClassName" />

        <CheckBox
            android:id="@+id/incorrect_answer_seven_2"
            style="@style/AnswerStyle"
            android:text="@string/illegalClassName2" />

        <CheckBox
            android:id="@+id/incorrect_answer_seven_3"
            style="@style/AnswerStyle"
            android:text="@string/allOfTheAbove" />

        <!-- QUESTION 8 -->
        <TextView
            android:id="@+id/question_eight"
            style="@style/QuestionTitleStyle"
            android:text="@string/question_eight" />

        <RadioGroup
            android:id="@+id/radioGroupQuestion_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RadioButton
                android:id="@+id/correct_answer_eight"
                style="@style/AnswerStyle"
                android:text="@string/sp" />

            <RadioButton
                style="@style/AnswerStyle"
                android:text="@string/dp" />
        </RadioGroup>

        <!-- QUESTION 9 -->
        <TextView
            android:id="@+id/question_nine"
            style="@style/QuestionTitleStyle"
            android:text="@string/question_nine" />

        <RadioGroup
            android:id="@+id/radioGroupQuestion_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                style="@style/AnswerStyle"
                android:text="@string/trueAnswer" />

            <RadioButton
                android:id="@+id/correct_answer_nine"
                style="@style/AnswerStyle"
                android:text="@string/falseAnswer" />

        </RadioGroup>

        <!-- QUESTION 10 -->
        <TextView
            android:id="@+id/question_ten"
            style="@style/QuestionTitleStyle"
            android:text="@string/question_ten" />

        <RadioGroup
            android:id="@+id/radioGroupQuestion_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/correct_answer_ten"
                style="@style/AnswerStyle"
                android:text="@string/red" />

            <RadioButton
                style="@style/AnswerStyle"
                android:text="@string/blue" />

            <RadioButton
                style="@style/AnswerStyle"
                android:text="@string/black" />
        </RadioGroup>

        <!-- QUESTION 11 -->
        <TextView
            android:id="@+id/question_eleven"
            style="@style/QuestionTitleStyle"
            android:text="@string/question_eleven" />

        <RadioGroup
            android:id="@+id/radioGroupQuestion_11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/correct_answer_eleven"
                style="@style/AnswerStyle"
                android:text="@string/white" />

            <RadioButton
                style="@style/AnswerStyle"
                android:text="@string/purple" />

            <RadioButton
                style="@style/AnswerStyle"
                android:text="@string/blue" />
        </RadioGroup>

        <!-- QUESTION 12 -->
        <TextView
            android:id="@+id/question_twelve"
            style="@style/QuestionTitleStyle"
            android:text="@string/question_twelve" />

        <RadioGroup
            android:id="@+id/radioGroupQuestion_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <RadioButton
                android:id="@+id/correct_answer_twelve"
                style="@style/AnswerStyle"
                android:text="@string/black" />

            <RadioButton
                style="@style/AnswerStyle"
                android:text="@string/yellow" />

            <RadioButton
                style="@style/AnswerStyle"
                android:text="@string/purple" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:onClick="quizResults"
                android:text="@string/submit" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:onClick="retake"
                android:text="@string/reset" />
        </LinearLayout>
        <!-- PLACEHOLDER FOR RESULTS LIST 1-12-->
        <TextView
            android:id="@+id/resultSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp" />
    </LinearLayout>
</ScrollView>
